gen/gramaticaParser.java
// Generated from C:/Users/Usuario/Desktop/URJC/Segundo Cuatrimestre/Procesadores de Lenguajes/PracticaObligatoria/src\gramatica.g4 by ANTLR 4.9.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramaticaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCION=1, PROCEDIMIENTO=2, ABRIR_PARENTESIS=3, CERRAR_PARENTESIS=4, ENTERO=5, 
		REAL=6, CARACTER=7, INICIO=8, FIN=9, PUNTO_Y_COMA=10, RETURN=11, COMA=12, 
		IGUAL=13, MAS_IGUAL=14, MENOS_IGUAL=15, POR_IGUAL=16, ENTRE_IGUAL=17, 
		MAS=18, MENOS=19, MULTIPLICACION=20, DIVISION=21, BIFURCACION=22, ENTONCES=23, 
		SINO=24, BUCLEPARA=25, BUCLEMIENTRAS=26, BUCLE=27, HASTA=28, NO=29, CIERTO=30, 
		FALSO=31, Y=32, O=33, IGUAL_IGUAL=34, DISTINTO=35, MENOR=36, MAYOR=37, 
		MAYOR_IGUAL=38, MENOR_IGUAL=39, CONSTENTERO=40, CONSTREAL=41, IDENTIFICADOR=42, 
		IGNORE=43, CONSTLIT=44, WHITESPACE=45;
	public static final int
		RULE_program = 0, RULE_aux1 = 1, RULE_part = 2, RULE_restpart = 3, RULE_aux2 = 4, 
		RULE_listparam = 5, RULE_listparamAux = 6, RULE_type = 7, RULE_blq = 8, 
		RULE_sentlist = 9, RULE_sentlistAux = 10, RULE_sent = 11, RULE_aux3 = 12, 
		RULE_aux3Prima = 13, RULE_aux4 = 14, RULE_lid = 15, RULE_aux5 = 16, RULE_asig = 17, 
		RULE_exp = 18, RULE_expAux = 19, RULE_aux6 = 20, RULE_op = 21, RULE_lcond = 22, 
		RULE_lcondAux = 23, RULE_cond = 24, RULE_opl = 25, RULE_opr = 26;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "aux1", "part", "restpart", "aux2", "listparam", "listparamAux", 
			"type", "blq", "sentlist", "sentlistAux", "sent", "aux3", "aux3Prima", 
			"aux4", "lid", "aux5", "asig", "exp", "expAux", "aux6", "op", "lcond", 
			"lcondAux", "cond", "opl", "opr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'funcion'", "'procedimiento'", "'('", "')'", "'entero'", "'real'", 
			"'caracter'", "'inicio'", "'fin'", "';'", "'return'", "','", "'='", "'+='", 
			"'-='", "'*='", "'/='", "'+'", "'-'", "'*'", "'/'", "'bifurcacion'", 
			"'entonces'", "'sino'", "'buclepara'", "'buclemientras'", "'bucle'", 
			"'hasta'", "'no'", "'cierto'", "'falso'", "'y'", "'o'", "'=='", "'<>'", 
			"'<'", "'>'", "'>='", "'<='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUNCION", "PROCEDIMIENTO", "ABRIR_PARENTESIS", "CERRAR_PARENTESIS", 
			"ENTERO", "REAL", "CARACTER", "INICIO", "FIN", "PUNTO_Y_COMA", "RETURN", 
			"COMA", "IGUAL", "MAS_IGUAL", "MENOS_IGUAL", "POR_IGUAL", "ENTRE_IGUAL", 
			"MAS", "MENOS", "MULTIPLICACION", "DIVISION", "BIFURCACION", "ENTONCES", 
			"SINO", "BUCLEPARA", "BUCLEMIENTRAS", "BUCLE", "HASTA", "NO", "CIERTO", 
			"FALSO", "Y", "O", "IGUAL_IGUAL", "DISTINTO", "MENOR", "MAYOR", "MAYOR_IGUAL", 
			"MENOR_IGUAL", "CONSTENTERO", "CONSTREAL", "IDENTIFICADOR", "IGNORE", 
			"CONSTLIT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramatica.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private Program programa;

	    public gramaticaParser(TokenStream input, Program thePrograma){
	        this(input);
	        programa = thePrograma;
	    }

	public gramaticaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public PartContext part;
		public Aux1Context aux1;
		public PartContext part() {
			return getRuleContext(PartContext.class,0);
		}
		public Aux1Context aux1() {
			return getRuleContext(Aux1Context.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			((ProgramContext)_localctx).part = part();
			setState(55);
			((ProgramContext)_localctx).aux1 = aux1();

			        Part parte = ((ProgramContext)_localctx).part.parte;
			        ArrayList<Part> partes = ((ProgramContext)_localctx).aux1.partes;
			        Program programa = new Program(parte,partes);
			        System.out.println(programa.toString());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aux1Context extends ParserRuleContext {
		public ArrayList<Part> partes;
		public PartContext part;
		public Aux1Context aux1;
		public PartContext part() {
			return getRuleContext(PartContext.class,0);
		}
		public Aux1Context aux1() {
			return getRuleContext(Aux1Context.class,0);
		}
		public Aux1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aux1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterAux1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitAux1(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitAux1(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aux1Context aux1() throws RecognitionException {
		Aux1Context _localctx = new Aux1Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_aux1);
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCION:
			case PROCEDIMIENTO:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				((Aux1Context)_localctx).part = part();
				setState(59);
				((Aux1Context)_localctx).aux1 = aux1();

				        ((Aux1Context)_localctx).partes =  new ArrayList<Part>();
				        _localctx.partes.add(((Aux1Context)_localctx).part.parte);
				        _localctx.partes.addAll(((Aux1Context)_localctx).aux1.partes);
				    
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 2);
				{

				        //Primera que se ejecuta, fin de la recursividad
				        ((Aux1Context)_localctx).partes =  new ArrayList<Part>();
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PartContext extends ParserRuleContext {
		public Part parte;
		public TypeContext type;
		public RestpartContext restpart;
		public TerminalNode FUNCION() { return getToken(gramaticaParser.FUNCION, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public RestpartContext restpart() {
			return getRuleContext(RestpartContext.class,0);
		}
		public TerminalNode PROCEDIMIENTO() { return getToken(gramaticaParser.PROCEDIMIENTO, 0); }
		public PartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PartContext part() throws RecognitionException {
		PartContext _localctx = new PartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_part);
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCION:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				match(FUNCION);
				setState(66);
				((PartContext)_localctx).type = type();
				setState(67);
				((PartContext)_localctx).restpart = restpart();

				        String tipo = ((PartContext)_localctx).type.tipo;
				        ((PartContext)_localctx).parte =  new Funcion(((PartContext)_localctx).restpart.nombre,tipo,((PartContext)_localctx).restpart.variables,((PartContext)_localctx).restpart.bloque);
				    
				}
				break;
			case PROCEDIMIENTO:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(PROCEDIMIENTO);
				setState(71);
				((PartContext)_localctx).restpart = restpart();

				        ((PartContext)_localctx).parte =  new Procedimiento(((PartContext)_localctx).restpart.nombre,((PartContext)_localctx).restpart.variables,((PartContext)_localctx).restpart.bloque);
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RestpartContext extends ParserRuleContext {
		public String nombre;
		public ArrayList<Parametro> variables;
		public Blq bloque;
		public Token IDENTIFICADOR;
		public Aux2Context aux2;
		public TerminalNode IDENTIFICADOR() { return getToken(gramaticaParser.IDENTIFICADOR, 0); }
		public TerminalNode ABRIR_PARENTESIS() { return getToken(gramaticaParser.ABRIR_PARENTESIS, 0); }
		public Aux2Context aux2() {
			return getRuleContext(Aux2Context.class,0);
		}
		public RestpartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_restpart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterRestpart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitRestpart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitRestpart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RestpartContext restpart() throws RecognitionException {
		RestpartContext _localctx = new RestpartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_restpart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			((RestpartContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
			setState(77);
			match(ABRIR_PARENTESIS);
			setState(78);
			((RestpartContext)_localctx).aux2 = aux2();

			        ((RestpartContext)_localctx).nombre =  (((RestpartContext)_localctx).IDENTIFICADOR!=null?((RestpartContext)_localctx).IDENTIFICADOR.getText():null);
			        ((RestpartContext)_localctx).variables =  ((RestpartContext)_localctx).aux2.parametros;
			        ((RestpartContext)_localctx).bloque =  ((RestpartContext)_localctx).aux2.bloque;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aux2Context extends ParserRuleContext {
		public ArrayList<Parametro> parametros;
		public Blq bloque;
		public ListparamContext listparam;
		public BlqContext blq;
		public ListparamContext listparam() {
			return getRuleContext(ListparamContext.class,0);
		}
		public TerminalNode CERRAR_PARENTESIS() { return getToken(gramaticaParser.CERRAR_PARENTESIS, 0); }
		public BlqContext blq() {
			return getRuleContext(BlqContext.class,0);
		}
		public Aux2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aux2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterAux2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitAux2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitAux2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Aux2Context aux2() throws RecognitionException {
		Aux2Context _localctx = new Aux2Context(_ctx, getState());
		enterRule(_localctx, 8, RULE_aux2);
		try {
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTERO:
			case REAL:
			case CARACTER:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				((Aux2Context)_localctx).listparam = listparam();
				setState(82);
				match(CERRAR_PARENTESIS);
				setState(83);
				((Aux2Context)_localctx).blq = blq(1);

				        ((Aux2Context)_localctx).parametros =  ((Aux2Context)_localctx).listparam.lista;
				        ((Aux2Context)_localctx).bloque =  ((Aux2Context)_localctx).blq.bloque;
				    
				}
				break;
			case CERRAR_PARENTESIS:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				match(CERRAR_PARENTESIS);
				setState(87);
				((Aux2Context)_localctx).blq = blq(1);

				        ((Aux2Context)_localctx).parametros =  new ArrayList<>();
				        ((Aux2Context)_localctx).bloque =  ((Aux2Context)_localctx).blq.bloque;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListparamContext extends ParserRuleContext {
		public ArrayList<Parametro> lista;
		public TypeContext type;
		public Token IDENTIFICADOR;
		public ListparamAuxContext listparamAux;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(gramaticaParser.IDENTIFICADOR, 0); }
		public ListparamAuxContext listparamAux() {
			return getRuleContext(ListparamAuxContext.class,0);
		}
		public ListparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterListparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitListparam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitListparam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListparamContext listparam() throws RecognitionException {
		ListparamContext _localctx = new ListparamContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_listparam);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((ListparamContext)_localctx).type = type();
			setState(93);
			((ListparamContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
			setState(94);
			((ListparamContext)_localctx).listparamAux = listparamAux();

			        ((ListparamContext)_localctx).lista =  new ArrayList<>();
			        Parametro param = new Parametro(((ListparamContext)_localctx).type.tipo, (((ListparamContext)_localctx).IDENTIFICADOR!=null?((ListparamContext)_localctx).IDENTIFICADOR.getText():null));
			        _localctx.lista.add(param);
			        _localctx.lista.addAll(((ListparamContext)_localctx).listparamAux.lista);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListparamAuxContext extends ParserRuleContext {
		public ArrayList<Parametro> lista;
		public TypeContext type;
		public Token IDENTIFICADOR;
		public ListparamAuxContext listparamAux;
		public TerminalNode COMA() { return getToken(gramaticaParser.COMA, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFICADOR() { return getToken(gramaticaParser.IDENTIFICADOR, 0); }
		public ListparamAuxContext listparamAux() {
			return getRuleContext(ListparamAuxContext.class,0);
		}
		public ListparamAuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listparamAux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterListparamAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitListparamAux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitListparamAux(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListparamAuxContext listparamAux() throws RecognitionException {
		ListparamAuxContext _localctx = new ListparamAuxContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_listparamAux);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(COMA);
				setState(98);
				((ListparamAuxContext)_localctx).type = type();
				setState(99);
				((ListparamAuxContext)_localctx).IDENTIFICADOR = match(IDENTIFICADOR);
				setState(100);
				((ListparamAuxContext)_localctx).listparamAux = listparamAux();

				        ((ListparamAuxContext)_localctx).lista =  new ArrayList<>();
				        Parametro param = new Parametro(((ListparamAuxContext)_localctx).type.tipo, (((ListparamAuxContext)_localctx).IDENTIFICADOR!=null?((ListparamAuxContext)_localctx).IDENTIFICADOR.getText():null));
				        _localctx.lista.add(param);
				        _localctx.lista.addAll(((ListparamAuxContext)_localctx).listparamAux.lista);
				    
				}
				break;
			case CERRAR_PARENTESIS:
				enterOuterAlt(_localctx, 2);
				{

				        ((ListparamAuxContext)_localctx).lista =  new ArrayList<>();
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public String tipo;
		public Token ENTERO;
		public Token REAL;
		public Token CARACTER;
		public TerminalNode ENTERO() { return getToken(gramaticaParser.ENTERO, 0); }
		public TerminalNode REAL() { return getToken(gramaticaParser.REAL, 0); }
		public TerminalNode CARACTER() { return getToken(gramaticaParser.CARACTER, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_type);
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ENTERO:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				((TypeContext)_localctx).ENTERO = match(ENTERO);

				       ((TypeContext)_localctx).tipo =  (((TypeContext)_localctx).ENTERO!=null?((TypeContext)_localctx).ENTERO.getText():null);
				    
				}
				break;
			case REAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				((TypeContext)_localctx).REAL = match(REAL);

				       ((TypeContext)_localctx).tipo =  (((TypeContext)_localctx).REAL!=null?((TypeContext)_localctx).REAL.getText():null);
				    
				}
				break;
			case CARACTER:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				((TypeContext)_localctx).CARACTER = match(CARACTER);

				       ((TypeContext)_localctx).tipo =  (((TypeContext)_localctx).CARACTER!=null?((TypeContext)_localctx).CARACTER.getText():null);
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlqContext extends ParserRuleContext {
		public int indent;
		public Blq bloque;
		public SentlistContext sentlist;
		public TerminalNode INICIO() { return getToken(gramaticaParser.INICIO, 0); }
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public TerminalNode FIN() { return getToken(gramaticaParser.FIN, 0); }
		public BlqContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlqContext(ParserRuleContext parent, int invokingState, int indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_blq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterBlq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitBlq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitBlq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlqContext blq(int indent) throws RecognitionException {
		BlqContext _localctx = new BlqContext(_ctx, getState(), indent);
		enterRule(_localctx, 16, RULE_blq);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(INICIO);
			setState(115);
			((BlqContext)_localctx).sentlist = sentlist(_localctx.indent);
			setState(116);
			match(FIN);

			        ArrayList<Sentencia> sentencias = new ArrayList<>();
			        sentencias = ((BlqContext)_localctx).sentlist.sentencias;
			        ((BlqContext)_localctx).bloque =  new Blq(((BlqContext)_localctx).sentlist.sentencias,_localctx.indent);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentlistContext extends ParserRuleContext {
		public int indent;
		public ArrayList<Sentencia> sentencias;
		public SentContext sent;
		public SentlistAuxContext sentlistAux;
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistAuxContext sentlistAux() {
			return getRuleContext(SentlistAuxContext.class,0);
		}
		public SentlistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SentlistContext(ParserRuleContext parent, int invokingState, int indent) {
			super(parent, invokingState);
			this.indent = indent;
		}
		@Override public int getRuleIndex() { return RULE_sentlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).enterSentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticaListener ) ((gramaticaListener)listener).exitSentlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticaVisitor ) return ((gramaticaVisitor<? extends T>)visitor).visitSentlist(this);
			else return visitor.visitChildren(this);
		}
	}
